# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[project]
name = "flexloopy"
dynamic = ["version"]

readme = "README.md"
license = {file = "LICENSE"}
keywords = ["machine learning", "inference"]
requires-python = ">=3.12"

dependencies = ["apache-tvm-ffi"]

[project.urls]
Repository = "https://github.com/xinetzone/tvm-book"
Documentation = "https://tvm-book.readthedocs.io/"

[project.optional-dependencies]
doc = [
  "mystx",
  "myst-nb",
  "sphinx-book-theme",
  "sphinx",
  "ablog",
  "ipywidgets",
  "folium",
  "sphinx-comments",
  "nbclient",
  "sphinx-design",
  "sphinx-examples",
  "sphinx-copybutton",
  "sphinx-contributors",
  "sphinx-thebe",
  "sphinxcontrib-bibtex",
  "sphinxext-opengraph",
  "sphinx-sitemap",
  "sphinx-autoapi>=3.4",
  "graphviz",
  "sphinx-tippy",
  "sphinx-icon",
  "sphinxcontrib-katex",
  "taolib",
]

dev = [
  "pandas",
  "numpy",
  "matplotlib",
  # "plotly",
]

[build-system]
requires = ["scikit-build-core>=0.10.0", "apache-tvm-ffi","cython>=3.0", "setuptools-scm"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
# wheel.py-api = "cp312"
minimum-version = "build-system.requires"
ninja.version = ">=1.11"
ninja.make-fallback = false

# Build configuration
build-dir = "build"
build.verbose = true

# Editable install configuration
editable.rebuild = false
editable.verbose = true

# CMake configuration
cmake.version = "CMakeLists.txt"
cmake.build-type = "Release"
# cmake.args = [
#   "-DTVM_FFI_ATTACH_DEBUG_SYMBOLS=ON",
#   "-DTVM_FFI_BUILD_TESTS=OFF",
#   "-DTVM_FFI_BUILD_PYTHON_MODULE=ON",
# ]

# Logging
logging.level = "INFO"

# Wheel configuration
wheel.packages = ["python/flexloopy"]
wheel.install-dir = "flexloopy"
